--- a/css/estilos.css
+++ b/css/estilos.css
@@ -111,12 +111,12 @@
     
 }
 
-.header__modal-container{
+.header__modal-container {
     width: 80%;
     margin: 0 10%;
     max-height: 88vh;
-    color: white;
-    background-color: black;
+    color: black;
+    background-color: #E6E9F3;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -125,7 +125,6 @@
     z-index: 9;
     top: 12vh;
     scrollbar-color: none;
-
 }
 .header__modal-container::-webkit-scrollbar {
     display: none;
@@ -167,6 +166,22 @@
     padding: 20px;
     text-align: center;
     padding-top: 20px;
+}
+
+.delete__producto{
+    cursor: pointer;
+}
+
+.cantidad__carrito {
+    background-color: lightskyblue;
+    color: black;
+    border-radius: 50%;
+    font-size: 20px;
+    padding: 4px;
+    top: 40px;
+    right: 80px;
+    position: absolute;
+    display: none;
 }
 
 
