--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,12 @@
     padding: 0;
     box-sizing: border-box;
 }
-.header__logo{
-        width: 200px;
 
+.header__logo{
+    width: 100px;
+    margin-right: 20px;
 }
+
 .header__cont {
     display: flex;
     flex-direction: column;
@@ -60,43 +62,45 @@
     width: 100%;
 
 }
-/* INICIO ESTILOS DE JAVASCRIPT */
 
-.main__contenido {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    margin-top: 30px;
-    gap: 16px;
+.nav-icons {
+    width: 150px;
 }
 
-.card {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    border-radius: 5%;
-    max-width: 300px;
-    margin: auto;
+/* INICIO ESTILOS DE JAVASCRIPT */
+
+.main__content {
+    gap: 50px;
+}
+
+/* card styles */
+.custom-card {
+    margin: 0 auto;
     text-align: center;
+    max-width: 18rem;
     font-family: 'Nanum Myeongjo', serif;
+    padding: 0;
 }
 
 .card > img {
     width: 100%;
-    height: 400px;
-    border-radius: 5%;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 8px;
 }
 
-.price {
+.card .price {
     color: grey;
     font-size: 22px;
 }
 
 .card button {
     border: none;
-    border-radius: 8%;
+    border-radius: 8px;
     outline: 0;
-    padding: 12px;
-    color: white;
-    background-color: black;
+    padding: 10px;
+    color: #fff;
+    background-color: #121212;
     text-align: center;
     cursor: pointer;
     width: 100%;
@@ -106,6 +110,7 @@
 .card button:hover {
     opacity: 0.7;
 }
+
 
 .parrafo_carrito {
     color: black;
@@ -193,7 +198,7 @@
 /* FIN ESTILOS DE JAVASCRIPT */
 
 .main__backgroun{
-    background: url(../img/ala1.jpg);
+    background: url(/public/assets/img/ala1.jpg);
     background-size: cover;
     height: 250px;
     width: 100%;
@@ -314,4 +319,10 @@
 .footer__form-inside{
     display: flex;
     
+}
+
+.booked-img {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
 }
