--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+body {
+    font-family: 'Poppins', sans-serif !important;
 }
 
 .header__logo{
@@ -13,7 +13,6 @@
     display: flex;
     flex-direction: column;
     background-color: rgba(255, 255, 255, 0.4);
-    font-family: 'Nanum Myeongjo', serif;
 }
 .header__cont-one {
     display: flex;
@@ -78,23 +77,30 @@
     margin: 0 auto;
     text-align: center;
     max-width: 18rem;
-    font-family: 'Nanum Myeongjo', serif;
     padding: 0;
+    transition: .2s all ease-in;
+    cursor: default;
 }
 
-.card > img {
+.custom-card:hover {
+    box-shadow: 1px -1px 5px 1px rgba(0, 0, 0, 0.175);
+    -webkit-box-shadow: 1px -1px 5px 1px rgba(0, 0, 0, 0.175);
+    -moz-box-shadow: 1px -1px 5px 1px rgba(0, 0, 0, 0.175);
+}
+
+.custom-card > img {
     width: 100%;
     height: 300px;
     object-fit: cover;
-    border-radius: 8px;
+    border-radius: 6px;
 }
 
-.card .price {
+.custom-card.price {
     color: grey;
     font-size: 22px;
 }
 
-.card button {
+.custom-card button {
     border: none;
     border-radius: 8px;
     outline: 0;
@@ -107,16 +113,19 @@
     font-size: 18px;
 }
 
-.card button:hover {
+.custom-card button:hover {
     opacity: 0.7;
 }
 
 
-.parrafo_carrito {
+.initial-description {
     color: black;
     text-align: center;
-    margin: 2rem;
-    font-family: 'Nanum Myeongjo', serif;
+    margin: 4rem 0;
+}
+
+.initial-description h3 {
+    margin-bottom: 1em;
 }
 
 .header__modal-container {
@@ -209,7 +218,6 @@
     position: absolute;
     left: 70%;
     top: 30%;
-    font-family: 'Nanum Myeongjo', serif;
     text-align: center;
 }
 .main__subtitulo {
@@ -246,7 +254,6 @@
     top: 10px;
     left: 20px;
     font-size: 3rem;
-    font-family: 'Nanum Myeongjo', serif;
     color: black;
 }
 .main__parrafo {
@@ -255,7 +262,6 @@
     top: 90px;
     left: 25px;
     font-size: 1rem;
-    font-family: 'Nanum Myeongjo', serif;
     color: black;
 }
 .main__parrafo-dos {
@@ -264,7 +270,6 @@
     top: 100px;
     left: 20px;
     font-size: 3rem;
-    font-family: 'Nanum Myeongjo', serif;
     color: black;
 }
 .main__parrafo-tres{
@@ -273,7 +278,6 @@
     top: 390px;
     left: 10px;
     font-size: 0.9rem;
-    font-family: 'Nanum Myeongjo', serif;
     color: black;
 }
 .main__relevante-parrafouno{
@@ -282,7 +286,6 @@
     top: 10px;
     left: 20px;
     font-size: 2rem;
-    font-family: 'Nanum Myeongjo', serif;
     color: black;
 }
 
